<resources>

    <string name="app_name">The_Hindu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">TheHinduClone</string>
    <string name="title_activity_side_nav"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_election">Elections</string>
    <string name="menu_covid_19">COVID-19</string>
    <string name="menu_national">National</string>
    <string name="menu_international">International</string>
    <string name="menu_states">States</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="business">Business</string>
    <string name="editorials">Editorials and Opinion</string>
    <string name="sports">Sports</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="todays_paper">Todays Paper</string>
    <string name="multimedia">Multimedia</string>
    <string name="life_style">Life and Style</string>
    <string name="cities">Cities</string>
    <string name="books">Books</string>
    <string name="archive">Archive</string>
    <string name="e_paper">E-Paper</string>
    <string name="news_in_quotes">News In Quotes</string>
    <string name="wellbeing">Wellbeing</string>
    <string name="Crossword">Crossword+</string>
    <string name="th_read">thREAD</string>
    <string name="top_picks">Top Picks</string>
    <string name="specials">Specials</string>
    <string name="news_digest">News Digest</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="read_aloud">Read Aloud</string>
    <string name="push_notification">Push Notification</string>
    <string name="night_mode">Night Mode</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="article_font_size">Article Font Size</string>


</resources>